fix (CSS module): fixes horizontal scroll bar.

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -13,6 +13,7 @@
 body {
   background-color: var(--light-secondary);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  overflow-x: hidden;
 }
 
 ul {
